chore: Code quality improvements